[gd_scene load_steps=6 format=3 uid="uid://d2agvxk0mpi7p"]

[ext_resource type="Texture2D" uid="uid://cxrq1nrriusd1" path="res://Imported_Assets/kenney_pixel-platformer/Tiles/tile_0151.png" id="1_jkbvf"]
[ext_resource type="Script" path="res://Player/player_hud.gd" id="1_pq040"]
[ext_resource type="Texture2D" uid="uid://dy0r8e6gfjgj4" path="res://Imported_Assets/kenney_pixel-platformer/Tiles/tile_0067.png" id="2_1c2ug"]
[ext_resource type="Texture2D" uid="uid://bd58ucbq05tr5" path="res://Imported_Assets/kenney_pixel-platformer/Tiles/tile_0044.png" id="2_e4n5e"]
[ext_resource type="Script" path="res://Player/HealthPoints.gd" id="2_wvklw"]

[node name="PlayerHud" type="CanvasLayer"]
script = ExtResource("1_pq040")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthPoints" type="Container" parent="HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_wvklw")

[node name="Heart1" type="TextureRect" parent="HUD/HealthPoints"]
layout_mode = 2
texture = ExtResource("2_e4n5e")

[node name="Heart2" type="TextureRect" parent="HUD/HealthPoints"]
layout_mode = 2
texture = ExtResource("2_e4n5e")

[node name="Heart3" type="TextureRect" parent="HUD/HealthPoints"]
layout_mode = 2
texture = ExtResource("2_e4n5e")

[node name="Coins" type="TextureRect" parent="HUD"]
layout_mode = 2
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("1_jkbvf")

[node name="x" type="Label" parent="HUD/Coins"]
layout_mode = 0
offset_left = 24.0
offset_right = 34.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinCounter" type="Label" parent="HUD/Coins"]
layout_mode = 0
offset_left = 40.0
offset_right = 61.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "##"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Diamonds" type="TextureRect" parent="HUD"]
layout_mode = 2
offset_top = 24.0
offset_right = 24.0
offset_bottom = 48.0
texture = ExtResource("2_1c2ug")

[node name="x" type="Label" parent="HUD/Diamonds"]
layout_mode = 0
offset_left = 24.0
offset_right = 34.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiamondCounter" type="Label" parent="HUD/Diamonds"]
layout_mode = 0
offset_left = 40.0
offset_right = 61.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "##"
horizontal_alignment = 1
vertical_alignment = 1
